.provarCaches/00D410000011HE0EAM/objects/rstk__soprodsvc__c.object
<CustomObject>
    <description>soprodsvc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soprodsvc_soprod__r.rstk__externalid__c &amp; &quot;_&quot; &amp; rstk__soprodsvc_svcprod__r.rstk__externalid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soprodsvc_svcprod__r.rstk__soprod_prod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodsvc_soprod__c</fullName>
        <inlineHelpText>This is the Product for which the Associated Service Item is associated with.</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>soprodsvcs</relationshipLabel>
        <relationshipName>soprodsvcs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soprodsvc_svcprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Recurring  Service Product associated with the given Product.</inlineHelpText>
        <label>Recurring Service Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>soprodsvcs (Recurring Service Product)</relationshipLabel>
        <relationshipName>soprodsvcs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Product Associated Services</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>soprodsvcs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>